--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -21,10 +21,10 @@
         android:ems="10"
         android:id="@+id/editText"
         android:hint="@string/weight_label"
-        android:layout_marginTop="180dp"
-        android:layout_below="@+id/spinnerCountry"
+        android:layout_below="@+id/spinnerItemType"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="37dp" />
 
     <Spinner
         android:layout_width="wrap_content"
@@ -38,7 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/spinnerItemType"
-        android:layout_above="@+id/button"
+        android:layout_below="@+id/textView2"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -47,9 +47,9 @@
         android:layout_height="wrap_content"
         android:text="Select Item Type"
         android:id="@+id/textView2"
-        android:layout_above="@+id/spinnerItemType"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_below="@+id/spinnerCategory"
+        android:layout_alignRight="@+id/textView"
+        android:layout_alignEnd="@+id/textView" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -98,7 +98,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/spinnerCategory"
-        android:layout_above="@+id/textView2"
+        android:layout_below="@+id/textView5"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -107,8 +107,8 @@
         android:layout_height="wrap_content"
         android:text="Select Category"
         android:id="@+id/textView5"
-        android:layout_above="@+id/spinnerCategory"
-        android:layout_alignRight="@+id/textView"
-        android:layout_alignEnd="@+id/textView" />
+        android:layout_below="@+id/spinnerCountry"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
