--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -23,8 +23,7 @@
         android:hint="@string/weight_label"
         android:layout_below="@+id/spinnerItemType"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="37dp" />
+        android:layout_alignParentStart="true" />
 
     <Spinner
         android:layout_width="wrap_content"
@@ -77,10 +76,10 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Cost:"
         android:id="@+id/textView3"
-        android:layout_below="@+id/editText"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="67dp" />
+        android:layout_marginBottom="72dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -110,5 +109,46 @@
         android:layout_below="@+id/spinnerCountry"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="numberDecimal"
+        android:ems="10"
+        android:id="@+id/length"
+        android:layout_below="@+id/editText"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/textView5"
+        android:layout_alignEnd="@+id/textView5"
+        android:hint="Enter Length"
+        android:textSize="15dp" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="numberDecimal"
+        android:ems="10"
+        android:id="@+id/width"
+        android:layout_below="@+id/editText"
+        android:layout_toRightOf="@+id/length"
+        android:layout_alignRight="@+id/editText"
+        android:layout_alignEnd="@+id/editText"
+        android:textSize="15dp"
+        android:hint="Enter Width" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="numberDecimal"
+        android:ems="10"
+        android:id="@+id/height"
+        android:layout_alignBottom="@+id/width"
+        android:layout_alignRight="@+id/button"
+        android:layout_alignEnd="@+id/button"
+        android:layout_toRightOf="@+id/editText"
+        android:layout_toEndOf="@+id/editText"
+        android:hint="Enter Height"
+        android:textSize="15dp" />
 
 </RelativeLayout>
